# cppframes

./: .gitignore  CMakeLists.txt  README.md
ext/catch/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
ext/catch/catch/src/catch-stamp/: catch-download.cmake
ext/catch/catch/tmp/: catch-gitclone.cmake
include/: Frame.h  GenericFrame.h  InstanceFrame.h  Property.h
src/: Frame.cpp  Frame.h  GenericFrame.cpp  GenericFrame.h  InstanceFrame.cpp  InstanceFrame.h  Property.cpp  Property.h
test/: PropertyTest.cpp
